syntax = "proto3";

package go.micro.srv.dataservice;

service User {
	rpc CreateUser(CreateUserReq) returns (CreateUserResp) {}
}

message CreateUserReq {
	string name = 1;
}

message CreateUserResp {
	string msg = 1;
}
